<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:rowCount="9">
    <EditText
        android:id="@+id/Edit1"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="5"
        android:hint="@string/Edit1Hint"/>
    <EditText
        android:id="@+id/Edit2"

        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="5"
        android:hint="@string/Edit2Hint"
        android:layout_width="match_parent" />
    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn0"
        android:layout_column="0"
        android:layout_row="2"
        android:text="0"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn1"
        android:layout_column="1"
        android:layout_row="2"
        android:text="1"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn2"
        android:layout_column="2"
        android:layout_row="2"
        android:text="2"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn3"
        android:layout_column="3"
        android:layout_row="2"
        android:text="3"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn4"
        android:layout_column="4"
        android:layout_row="2"
        android:text="4"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn5"
        android:layout_column="0"
        android:layout_row="3"
        android:text="5"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn6"
        android:layout_column="1"
        android:layout_row="3"
        android:text="6"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn7"
        android:layout_column="2"
        android:layout_row="3"
        android:text="7"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn8"
        android:layout_column="3"
        android:layout_row="3"
        android:text="8"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/Btn9"
        android:layout_column="4"
        android:layout_row="3"
        android:text="9"/>

    <Button
        android:layout_column="0"
        android:layout_row="4"
        android:layout_columnSpan="5"
        android:id="@+id/BtnAdd"
        android:text="@string/TextAdd"
        android:onClick="btnArith_OnClick"
        android:layout_width="match_parent"/>

    <Button
        android:layout_column="0"
        android:layout_row="5"
        android:layout_columnSpan="5"
        android:id="@+id/BtnSub"
        android:text="@string/TextSub"
        android:onClick="btnArith_OnClick"
        android:layout_width="match_parent"/>

    <Button
        android:layout_column="0"
        android:layout_row="6"
        android:layout_columnSpan="5"
        android:id="@+id/BtnMul"
        android:text="@string/TextMul"
        android:onClick="btnArith_OnClick"
        android:layout_width="match_parent"/>

    <Button
        android:layout_column="0"
        android:layout_row="7"
        android:layout_columnSpan="5"
        android:id="@+id/BtnDiv"
        android:text="@string/TextDiv"
        android:onClick="btnArith_OnClick"
        android:layout_width="match_parent"/>
    <TextView
        android:layout_column="0"
        android:layout_row="8"
        android:layout_columnSpan="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TxtResult"
        android:text="@string/CalResult"
        android:textSize="30dp"
        android:textColor="#0000ff" />
</GridLayout>